# nav-aids

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-test.yml
ci/: build-and-test.yml
cmake/: ThirdParty.cmake
include/ltb/aero/: aero_constants.hpp  aircraft_type.hpp  airspeed.hpp  altitude.hpp
include/ltb/app/: antenna_app.hpp  app.hpp  cfd_lesson_1_app.hpp  gps_app.hpp  ils_app.hpp  vor_app.hpp
include/ltb/cam/: camera_2d.hpp  camera_render_params.hpp  fwd.hpp
include/ltb/cfd/: cfd_options.hpp
include/ltb/gps/: constants.hpp  receiver.hpp  satellite.hpp  utils.hpp
include/ltb/gui/: dsp.hpp  error_alert.hpp  generic_popup.hpp  glfw_opengl_imgui_setup.hpp  imgui.hpp  imgui_setup.hpp  incremental_id_generator.hpp  mesh_display_pipeline.hpp  mesh_display_settings.hpp  mesh_id.hpp
include/ltb/ils/: app.hpp  (+2 more)
res/shaders/: CMakeLists.txt  antenna.frag  antenna.vert  default.frag  default_p.vert  default_pc.vert  default_pn.vert  default_pnt.vert  default_pntc.vert  fullscreen.vert  ils-old.frag  ils.frag  ils.vert  mesh.frag  mesh.vert  tmp.frag  tmp.vert  triangle.frag  triangle.vert  wave.frag  wave.vert  wave_display.frag
res/shaders/cfd/: display2d.frag  lesson1.frag  wave_display.frag  wave_display.vert
res/shaders/ils/: ils_wave.frag  ils_wave.tesc  ils_wave.tese  ils_wave.vert
res/shaders/utils/: frag_constants_and_uniforms.glsl  vert_uniforms.glsl
src/: ils_main.cpp  main.cpp  test.cpp  vor_main.cpp
src/ltb/: ltb_config.hpp.in  ltb_nav_config.hpp.in
(+146 files in other folders)
